# lab04-figures

./: CMakeLists.txt  lab04-figures.cpp  lab04-figures.h  lab04-parallelogram.cpp  lab04-parallelogram.h  lab04-triangle.cpp  lab04-triangle.h
